# bgpneiget

./: pyproject.toml
src/bgpneiget/: __init__.py  cisco_iosxe_show_ip_bgp_sum.textfsm  cli.py  device.py  devices.py  runcmds.py  worker.py
src/bgpneiget/device/: arista.py  base.py  cisco.py  cisco_iosxe.py  cisco_iosxr.py  cisco_nxos.py  juniper.py
src/bgpneiget/textfsm/: cisco_iosxe_show_bgp.textfsm  cisco_iosxe_show_bgp_vrf.textfsm  cisco_iosxe_show_ip_bgp_sum.textfsm  cisco_iosxr_show_bgp.textfsm
