[tool.poetry]
name = "bgpneiget"
version = "1.0.0"
description = "Get BGP Neighbours from network devices"
authors = ["Rob Woodward <rob@emailplus.org>"]

license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/bgpneiget"
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.6, >=3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
